--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>flodesk</h1>
   <h2>Welcome back!</h2>
 
-  <input type="text" placeholder="Enter your email" class="input-box">
+  <input type="text" placeholder="swapneshbarik247@gmail.com" class="input-box">
    <input type="text" placeholder="Enter your password                                                         show" class="input-box">
   <button class="login-btn btn">Log in to Flodesk</button>
 
